--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   
   <header>
-    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-danger">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparent">
       <div class="container">
         <a href="index.html" class="navbar-brand">
           <img src="imagens/spotify.svg" width="142">
@@ -41,6 +41,9 @@
             <li>
               <a href="" class="nav-link">Baixar</a>
             </li>
+
+            <li class="nav-item divisor"></li>
+            
             <li>
               <a href="" class="nav-link">Inscrever-se</a>
             </li>
@@ -53,6 +56,23 @@
 
     </nav>
   </header>
+
+  <section id="home" class="d-flex">
+    <div class="container align-self-center">
+      <div class="row">
+        <div class="col-md-12 capa">
+
+          <h1 >Música para todos</h1>
+          <a href="" class="btn btn-custom btn-lg btn-roxo">
+            Aproveite o Spotify Free
+          </a>
+          <a href="" class="btn btn-custom btn-lg btn-branco">
+            Obter Spotify Preimum
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Optional JavaScript; choose one of the two! -->
 
