--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  
+
   <header>
     <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparent">
       <div class="container">
@@ -43,7 +43,7 @@
             </li>
 
             <li class="nav-item divisor"></li>
-            
+
             <li>
               <a href="" class="nav-link">Inscrever-se</a>
             </li>
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="col-md-12 capa">
 
-          <h1 >Música para todos</h1>
+          <h1>Música para todos</h1>
           <a href="" class="btn btn-custom btn-lg btn-roxo">
             Aproveite o Spotify Free
           </a>
@@ -73,6 +73,144 @@
       </div>
     </div>
   </section>
+
+  <section id="servicos" class="caixa">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="row albuns">
+            <div class="col-md-6">
+              <img src="imagens/img1.jpg" class="img-fluid d-none d-md-block">
+            </div>
+            <div class="col-md-6">
+              <img src="imagens/img2.jpg" class="img-fluid d-none d-md-block">
+            </div>
+          </div>
+          <div class="row albuns">
+            <div class="col-md-6">
+              <img src="imagens/img3.jpg" class="img-fluid d-none d-md-block">
+            </div>
+            <div class="col-md-6">
+              <img src="imagens/img4.jpg" class="img-fluid d-none d-md-block">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+
+          <h2>O que o Spotify tem?</h2>
+
+          <h3>Músicas</h3>
+          <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos
+            em um só lugar.</p>
+
+          <h3>Playlists</h3>
+          <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas em
+            música.</p>
+
+          <h3>Novos Lançamentos</h3>
+          <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no Top 50.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="recursos" class="caixa">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Fácil</h2>
+          <h3>Buscar</h3>
+          <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
+
+          <h3>Navegar</h3>
+          <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+
+          <h3>Descobrir</h3>
+          <p>Curta músicas novas toda segunda-feira com uma playlist personalizada para você. Ou relaxe e curta uma das
+            rádios.</p>
+        </div>
+        <div class="col-md-8">
+          <div class="row rotacionar">
+            <div class="col-md-6">
+              <img src="imagens/iphone1.png" class="img-fluid d-none d-md-block">
+            </div>
+            <div class="col-md-6">
+              <img src="imagens/iphone2.png" class="img-fluid d-none d-md-block">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2">
+          <img src="imagens/spotify.svg" width="142">
+        </div>
+        <div class="col-md-2">
+          <h4>COMPANY</h4>
+          <ul class="navbar-nav">
+            <li>
+              <a href="">Sobre</a>
+            </li>
+            <li>
+              <a href="">Empregos</a>
+            </li>
+            <li>
+              <a href="">Imprensa</a>
+            </li>
+            <li>
+              <a href="">Novidades</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h4>comunidades</h4>
+          <ul class="navbar-nav">
+            <li>
+              <a href="">Artistas</a>
+            </li>
+            <li>
+              <a href="">Desenvolvedores</a>
+            </li>
+            <li>
+              <a href="">Marcas</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h4>Links Úteis</h4>
+          <ul class="navbar-nav">
+            <li>
+              <a href="">Ajuda</a>
+            </li>
+            <li>
+              <a href="">Presentes</a>
+            </li>
+            <li>
+              <a href="">Player da Web</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <ul>
+            <li>
+              <a href=""><img src="imagens/facebook.png"></a>
+            </li>
+            <li>
+              <a href=""><img src="imagens/instagram.png"></a>
+            </li>
+            <li>
+              <a href=""><img src="imagens/twitter.png"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 
   <!-- Optional JavaScript; choose one of the two! -->
 
