Finalizado Spotify Clone

--- a/index.html
+++ b/index.html
@@ -61,16 +61,41 @@
     <div class="container align-self-center">
       <div class="row">
         <div class="col-md-12 capa">
+          <div class="carousel slide" id="carousel-spotify" data-ride="carousel">
 
-          <h1>Música para todos</h1>
-          <a href="" class="btn btn-custom btn-lg btn-roxo">
-            Aproveite o Spotify Free
-          </a>
-          <a href="" class="btn btn-custom btn-lg btn-branco">
-            Obter Spotify Preimum
-          </a>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <h1>Música para todos</h1>
+                <a href="" class="btn btn-custom btn-lg btn-roxo">
+                  Aproveite o Spotify Free
+                </a>
+                <a href="" class="btn btn-custom btn-lg btn-branco">
+                  Obter Spotify Preimum
+                </a>
+              </div>
+
+              <div class="carousel-item">
+                <h1>As melhores rádios</h1>
+                <a href="" class="btn btn-custom btn-lg btn-branco">
+                  <i class="fas fa-music">Ouça agora</i>
+                </a>
+              </div>
+            </div>
+
+            <a href="#carousel-spotify" class="carousel-control-prev" data-slide="prev">
+              <i class="fas fa-angle-left fa-3x"></i>
+            </a>
+
+            <a href="#carousel-spotify" class="carousel-control-next" data-slide="next">
+              <i class="fas fa-angle-right fa-3x"></i>
+            </a>
+
+          </div>
+
+
         </div>
       </div>
+    </div>
     </div>
   </section>
 
